chore: Merge release 2.4.3 back to main